position header to stop iamge overflow with little text, make key-points a:hover overflow override css more obvious, clean up proposition section code placement

--- a/tbx/static_src/sass/components/_key-points.scss
+++ b/tbx/static_src/sass/components/_key-points.scss
@@ -21,10 +21,12 @@
         }
     }
 
-    & &__link {
+    &__link {
         @include link-slide-right(4px, -5px);
-        &:hover {
-            border-bottom: 0;
+        .streamfield & {
+            &:hover {
+                border-bottom: 0;
+            }
         }
     }
 
